[project]
name = "union_pacific_api"
version = "0.0.3"
authors = [
  { name="Josh Price", email="joshkprice717@gmail.com" },
]
description = "A python client library for Union Pacific's API"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/jkp717/UnionPacificAPI"
Issues = "https://github.com/jkp717/UnionPacificAPI/issues"